--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     font-family: 'VT323';
     font-size: 22px;
     color:lightseagreen;
-   
 }
 .jumbotron{
     text-align:center;
@@ -12,9 +11,11 @@
     color:skyblue;
     background-image: url("Images/round.png");
 }
-#upload, #formy{
+#upload{
     float: right;
     margin-right:50%;
+    width:100px;
+    height:50px;
 }
 
 .alert{
@@ -50,13 +51,9 @@ body{
 .btn:hover, #upload:hover{
     opacity:50%;
     background-color:seagreen;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
 }
 
 .btn:active, #upload:active{
-    opacity:50%;
-    font-weight:bold;
     background-color:seagreen;
 }
 
@@ -66,6 +63,13 @@ form{
     padding:10px 10px 10px 10px;
     border-style:solid;
     border-width: 4px;
-    border-color:black;
+    border-color:black; 
+}
+
+
+#formy, .btn{
+    width:50%;
+    margin-left:25%;
+    margin-bottom:5px;
 }
 
