--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 #upload{
     float: right;
-    margin-right:50%;
+    margin-right:45%;
     width:100px;
     height:50px;
 }
@@ -73,3 +73,7 @@ form{
     margin-bottom:5px;
 }
 
+.alert{
+    text-align:center;
+    font:helvetica;
+}
