--- a/style.css
+++ b/style.css
@@ -4,51 +4,45 @@
     font-size: 22px;
     color:lightseagreen;
     line-height:2px;
+    margin-bottom:0;
 }
-
-
 .jumbotron{
     text-align:center;
     font-family: 'Monofett';
     font-size: 30px;
     color:skyblue;
     background-image: url("Images/round.png");
+    margin-bottom:0;
    
    
 }
-
 h1{
     line-height:2px;
 }
-
 #upload{
     float: right;
     margin-right:50%;
     width:100px;
     height:50px;
+    z-index:20;
 }
-
 .alert{
     text-align:center;
 }
-
 .text-center{
     display:inline;
     text-align:center;
 }
-
 body{
     background-color:lightgrey;
     margin: 0;
     padding: 0;
 }
-
 .radar{
     height:100px;
     width:100px;
     margin-bottom:18px;
 }
-
 .btn, #upload{
     font-family: 'VT323';
     background-color:lightseagreen;
@@ -59,16 +53,13 @@ body{
     border-width: 4px;
     border-color:black;
 }
-
 .btn:hover, #upload:hover{
     opacity:50%;
     background-color:seagreen;
 }
-
 .btn:active, #upload:active{
     background-color:seagreen;
 }
-
 form{
     background-color:skyblue;
     font:'helvetica';
@@ -76,26 +67,24 @@ form{
     border-style:solid;
     border-width: 4px;
     border-color:black; 
+    margin-top:5px;
 }
-
-
 #formy, .btn{
     width:50%;
     margin-left:25%;
     margin-bottom:5px;
 }
-
 #map{
     
-   margin-right:12.5%;
-   margin-left:12.5%;
+   margin-right:5.5%;
+   margin-left:5.5%;
     top: 0;
     bottom: 0;
-    width: 75%;
+    width: 89%;
     height:450px;
-    margin-top:2px;
+    margin-top:0;
+    
   }
-
   .marker {
     background-image: url('Images/mapbox-icon.png');
     background-size: cover;
@@ -104,11 +93,9 @@ form{
     border-radius: 50%;
     cursor: pointer;
   }
-
   .mapboxgl-popup {
     max-width: 200px;
   }
-
   .mapboxgl-popup-content {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
