--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ form{
     bottom: 0;
     width: 89%;
     height:450px;
-    margin-top:0;
+    margin-top:0px;
     z-index:1;
   }
   .marker {
